--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 ﻿<h1>Data Analysis Portfolio by Amanda Strack</h1>
-<p>projects</p>
+<p>This portfolio is a compilation of notebooks which I created for data analysis or for exploration of machine learning algorithms.</p>
+<h2>Data Exploration and Analysis</h2>
