--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 ﻿<h1>Data Analysis Portfolio by Amanda Strack</h1>
 <p>This portfolio is a compilation of notebooks which I created for data analysis or for exploration of machine learning algorithms.</p>
 <h2>Data Exploration and Analysis</h2>
-<a href="https://github.com/amandastrack/discoveryOfHandwashing/">Github</href>
+<a href="https://github.com/amandastrack/discoveryOfHandwashing/blob/master/notebook.ipynb">Github</href>
