added first project description (handwashing)

--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 ﻿<h1>Data Analysis Portfolio by Amanda Strack</h1>
 <p>This portfolio is a compilation of notebooks which I created for data analysis or for exploration of machine learning algorithms.</p>
-<h2>Data Exploration and Analysis</h2>
+<h2>Datacamp Projects</h2>
+<h3>Dr. Semmelweis and the discovery of handwashing</h3>
+<p>Here I analyzed the data behind the breakthrough discovery of handwashing in 1847. I used the basics of Tidyverse (dplyr, ggplot2) to manipulate, analyze and visualize the data. </p>
 <a href="https://github.com/amandastrack/discoveryOfHandwashing/blob/master/notebook.ipynb">Github</href>
