--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 ﻿<h1>Data Analysis Portfolio by Amanda Strack</h1>
-<p>This portfolio is a compilation of notebooks which I created for data analysis or for exploration of machine learning algorithms.</p>
+<p>This portfolio is a compilation of notebooks which I created for data analysis and exploration of machine learning algorithms.</p>
+<h2>Kaggle Datasets</h2>
+<h3> Mobile App Store Analysis</h3>
+<a href="https://github.com/amandastrack/mobileAppStoreAnalysis/blob/master/Mobile%20App%20Store.ipynb">Github</href>
+<p>This Kaggle dataset contains more than 7000 Apple iOS mobile application details. I analyzed the app statistics based on the different genres. </p>
+
 <h2>Datacamp Projects</h2>
 <h3>Dr. Semmelweis and the discovery of handwashing</h3>
-<p>Here I analyzed the data behind the breakthrough discovery of handwashing in 1847. I used the basics of Tidyverse (dplyr, ggplot2) to manipulate, analyze and visualize the data. </p>
 <a href="https://github.com/amandastrack/discoveryOfHandwashing/blob/master/notebook.ipynb">Github</href>
+<p>Here I analyzed the data behind the breakthrough discovery of handwashing in 1847. I used the basics of Tidyverse (dplyr, ggplot2) to manipulate, analyze and visualize the data. </p>
