--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<center>
+﻿<p align = "justify">
 <h1>Data Analysis Portfolio by Amanda Strack</h1>
 <p>This portfolio is a compilation of notebooks which I created for data analysis and exploration of machine learning algorithms.</p>
 <h2>Kaggle Datasets</h2>
@@ -10,4 +10,4 @@
 <h3>Dr. Semmelweis and the discovery of handwashing</h3>
 <a href="https://github.com/amandastrack/discoveryOfHandwashing/blob/master/notebook.ipynb">Github</a>
 <p>Here I analyzed the data behind the breakthrough discovery of handwashing in 1847. I used the basics of Tidyverse (dplyr, ggplot2) to manipulate, analyze and visualize the data. </p>
-</center>
+</p>
