--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
-﻿<div align = "justify">
-<h1>Data Analysis Portfolio by Amanda Strack</h1>
-<p>This portfolio is a compilation of notebooks which I created for data analysis and exploration.</p>
-<h2>Kaggle Datasets</h2>
-<h3> Mobile App Store Analysis</h3>
-<a href="https://github.com/amandastrack/mobileAppStoreAnalysis/blob/master/Mobile%20App%20Store.ipynb">Github</a>
-<p>This Kaggle dataset contains more than 7000 Apple iOS mobile application details. I analyzed the app statistics based on the different genres. </p>
-
-<h2>Datacamp Projects</h2>
-<h3>Dr. Semmelweis and the discovery of handwashing</h3>
-<a href="https://github.com/amandastrack/discoveryOfHandwashing/blob/master/notebook.ipynb">Github</a>
-<p>Here I analyzed the data behind the breakthrough discovery of handwashing in 1847. I used the basics of Tidyverse (dplyr, ggplot2) to manipulate, analyze and visualize the data. </p>
+﻿<style>
+    .portfolio-container {
+        margin-right: auto;
+        margin-left: auto; 
+        max-width: 1012px; 
+    }
+</style>
+<div class="portfolio-container">
+    <div align = "justify">
+    <h1>Data Analysis Portfolio by Amanda Strack</h1>
+    <p>This portfolio is a compilation of notebooks which I created for data analysis and exploration.</p>
+    <h2>Kaggle Datasets</h2>
+    <h3> Mobile App Store Analysis</h3>
+    <a href="https://github.com/amandastrack/mobileAppStoreAnalysis/blob/master/Mobile%20App%20Store.ipynb">Github</a>
+    <p>This Kaggle dataset contains more than 7000 Apple iOS mobile application details. I analyzed the app statistics based on the different genres. </p>
+    
+    <h2>Datacamp Projects</h2>
+    <h3>Dr. Semmelweis and the discovery of handwashing</h3>
+    <a href="https://github.com/amandastrack/discoveryOfHandwashing/blob/master/notebook.ipynb">Github</a>
+    <p>Here I analyzed the data behind the breakthrough discovery of handwashing in 1847. I used the basics of Tidyverse (dplyr, ggplot2) to manipulate, analyze and visualize the data. </p>
+    </div>
 </div>
