--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p>This Kaggle dataset contains more than 7000 Apple iOS mobile application details. I analyzed the app statistics based on the different genres. </p>
     
     
-    <h3>Dr. Semmelweis and the discovery of handwashing</h3>
+    <h3>Dr. Semmelweis and the Discovery of Handwashing</h3>
     <a href="https://github.com/amandastrack/discoveryOfHandwashing/blob/master/notebook.ipynb">GitHub</a>
     <p>In this datacamp project, I analyzed the data behind the breakthrough discovery of handwashing in 1847. I used the basics of Tidyverse (dplyr, ggplot2) to manipulate, analyze and visualize the data. </p>
     </div>
