--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </style>
 <div class="portfolio-container">
     <div align = "justify">
-    <h1 style="font-family:"SFMono-Regular;">Data Analysis Portfolio by Amanda Strack</h1>
+    <h1 style="font-family:SFMono-Regular;">Data Analysis Portfolio by Amanda Strack</h1>
     <p>This portfolio is a compilation of notebooks which I created for data analysis using R.</p>
     <h2>Exploratory Data Analysis</h2>
     <h3> Mobile App Store Analysis</h3>
