revised project description

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h2>Exploratory Data Analysis</h2>
     <h3> Mobile App Store Analysis</h3>
     <a href="https://github.com/amandastrack/mobileAppStoreAnalysis/blob/master/Mobile%20App%20Store.ipynb">GitHub</a>
-    <p>This Kaggle dataset contains more than 7000 Apple iOS mobile application details. I analyzed the app statistics based on the different genres. </p>
+    <p>This Kaggle dataset contains more than 7000 Apple iOS mobile application details. I explored the app statistics across different genres and how the app details contribute to user ratings. </p>
     
     
     <h3>Dr. Semmelweis and the Discovery of Handwashing</h3>
