--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     
     <h3>Dr. Semmelweis and the Discovery of Handwashing</h3>
     <a href="https://github.com/amandastrack/discoveryOfHandwashing/blob/master/notebook.ipynb">GitHub</a>
-    <p>In this datacamp project, I analyzed the data behind the breakthrough discovery of handwashing in 1847. I used the basics of Tidyverse (dplyr, ggplot2) to manipulate, analyze and visualize the data. </p>
-    </div>
+    <p>In this Datacamp.com project, I analyzed the data behind the breakthrough discovery of handwashing in 1847. I used the basics of Tidyverse (dplyr, ggplot2) to manipulate, analyze and visualize the data. </p>
+    <h3> Who is Drunk and When in Ames, Iowa?</h3>
+    <a href="https://github.com/amandastrack/whoIsDrunkandWhenInAmesIowa/blob/master/notebook.ipynb">GitHub</a>
+    <p>This is another dataset from Datacamp.com. The data contains information on breath alcohol tests in Ames, Iowa, (home of Iowa State University) from 2013-2017. I use tidyverse to explore patterns in breathalyzer tests. </p>
+
+</div>
 </div>
