--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <p>In this Datacamp.com project, I analyzed the data behind the breakthrough discovery of handwashing in 1847. I used the basics of Tidyverse (dplyr, ggplot2) to manipulate, analyze and visualize the data. </p>
     <h3> Who is Drunk and When in Ames, Iowa?</h3>
     <a href="https://github.com/amandastrack/whoIsDrunkandWhenInAmesIowa/blob/master/notebook.ipynb">GitHub</a>
-    <p>This is another dataset from Datacamp.com. The data contains information on breath alcohol tests in Ames, Iowa, (home of Iowa State University) from 2013-2017. I use tidyverse to explore patterns in breathalyzer tests. </p>
+    <p>This is another project from Datacamp.com. The data contains information on breath alcohol tests in Ames, Iowa, (home of Iowa State University) from 2013-2017. I use tidyverse to explore patterns of breathalyzer tests in this college town. </p>
 
 </div>
 </div>
