--- a/index.html
+++ b/index.html
@@ -7,18 +7,21 @@
 </style>
 <div class="portfolio-container">
     <div align = "justify">
-    <h1 style="font-family:SFMono-Regular;">Data Analysis Portfolio by Amanda Strack</h1>
-    <p>This portfolio is a compilation of notebooks which I created for data analysis using R.</p>
-    <h2>Exploratory Data Analysis</h2>
-    <h3> Mobile App Store Analysis</h3>
+    <h1 style="font-family:SFMono-Regular;">Data Science Portfolio by Amanda Strack</h1>
+    <p>This portfolio is a compilation of notebooks that explore different machine learning and data analysis techniques. Projects are excecuted both in Python and R.</p>
+    <h2>Springboard Capstone Projects</h2>
+    <h3>Playlist Creation Using Audio Features</h3>
+    <p> In this project, I use audio features extracted from the Spotify API to classify songs into a playlist category. Machine learning techniques utilized include Random Forests, SVM, and XGBoost. I also use emsembling method of the three models in the final tuning of the model. 
+    <h4>Exploratory Data Analysis</h4>
+    <h5> Mobile App Store Analysis</h5>
     <a href="https://github.com/amandastrack/mobileAppStoreAnalysis/blob/master/Mobile%20App%20Store.ipynb">GitHub</a>
     <p>This Kaggle dataset contains more than 7000 Apple iOS mobile application details. I explored the app statistics across different genres and how the app details contribute to user ratings. </p>
     
     
-    <h3>Dr. Semmelweis and the Discovery of Handwashing</h3>
+    <h6>Dr. Semmelweis and the Discovery of Handwashing</h6>
     <a href="https://github.com/amandastrack/discoveryOfHandwashing/blob/master/notebook.ipynb">GitHub</a>
     <p>In this Datacamp.com project, I analyzed the data behind the breakthrough discovery of handwashing in 1847. I used the basics of Tidyverse (dplyr, ggplot2) to manipulate, analyze and visualize the data. </p>
-    <h3> Who is Drunk and When in Ames, Iowa?</h3>
+    <h7> Who is Drunk and When in Ames, Iowa?</h7>
     <a href="https://github.com/amandastrack/whoIsDrunkandWhenInAmesIowa/blob/master/notebook.ipynb">GitHub</a>
     <p>This is another project from Datacamp.com. The data contains information on breath alcohol tests in Ames, Iowa, (home of Iowa State University) from 2013-2017. I use tidyverse to explore patterns of breathalyzer tests in this college town. </p>
 
