--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
-﻿<style>
-    .portfolio-container {
-        margin-right: auto;
-        margin-left: auto; 
-        max-width: 1012px; 
-    }
-</style>
+<html lang="en-US">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+      
+
+    <link rel="stylesheet" href="/assets/css/style.css?v=5da57ba8036c8c57f6949f55a9d6cd2d477dc81c">
+  </head>
+  <body>
+    <div class="container-lg px-3 my-5 markdown-body">
 <div class="portfolio-container">
     <div align = "justify">
     <h1 style="font-family:SFMono-Regular;">Data Science Portfolio by Amanda Strack</h1>
@@ -26,4 +30,8 @@
     <p>This is another project from Datacamp.com. The data contains information on breath alcohol tests in Ames, Iowa, (home of Iowa State University) from 2013-2017. I use tidyverse to explore patterns of breathalyzer tests in this college town. </p>
 
 </div>
-</div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
+<script>anchors.add();</script>
+    
+  </body>
+</html>
