--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
   </head>
   <body>
     <div class="container-lg px-3 my-5 markdown-body">
-<div class="portfolio-container">
-    <div align = "justify">
-    <h1 style="font-family:SFMono-Regular;">Data Science Portfolio by Amanda Strack</h1>
+
+    <h1>Data Science Portfolio by Amanda Strack</h1>
     <p>This portfolio is a compilation of notebooks that explore different machine learning and data analysis techniques. Projects are excecuted both in Python and R.</p>
     <h2>Springboard Capstone Projects</h2>
     <h3>Playlist Creation Using Audio Features</h3>
