--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <p>This portfolio is a compilation of notebooks that explore different machine learning and data analysis techniques. Projects are excecuted both in Python and R.</p>
     <h2>Springboard Capstone Projects</h2>
     <h3>Playlist Creation Using Audio Features</h3>
+    <a href="https://github.com/amandastrack/Capstone-Project-I-">GitHub</a>
     <p> In this project, I use audio features extracted from the Spotify API to classify songs into a playlist category. Machine learning techniques utilized include Random Forests, SVM, and XGBoost. I also use emsembling method of the three models in the final tuning of the model. 
     <h2>Exploratory Data Analysis</h2>
     <h3> Mobile App Store Analysis</h3>
