--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
     .portfolio-container {
         margin-right: auto;
         margin-left: auto; 
-        max-width: 1012px; 
+        max-width: 1012px;
+       font-family: SFMono-Regular;
     }
 </style>
 <div class="portfolio-container">
