add bottom borders

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Page Title</title>
+<title>amandastrack.github.io</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -15,9 +15,9 @@ body {
 
 /* Header/Logo Title */
 .header {
-  padding: 45px;
+  padding: 50px;
   text-align: center;
-  background: #CABDBA;
+  background: #989898;
   color: white;
   font-size: 27px;
 }
@@ -40,12 +40,12 @@ text-align: justify;
 
 <div class="content">
     <p>This portfolio is a compilation of notebooks that explore different machine learning and data analysis techniques. Projects are executed both in Python and R.</p>  
-    <h2>Springboard Capstone Projects</h2>
+    <h2 style="border-bottom: 5px groove;">Springboard Capstone Projects</h2>
 
     <h3>Playlist Creation Using Audio Features <i>(Python)</i></h3>
     <a href="https://github.com/amandastrack/Capstone-Project-I-">GitHub</a>
     <p> In this project, I use audio features extracted from the Spotify API to classify songs into a playlist category. Machine learning techniques utilized include Random Forests, SVM, and XGBoost. I also use an ensembling method of the three models in the final tuning of the model. 
-   <h2>Exploratory Data Analysis</h2>
+   <h2 style="border-bottom: 5px groove;">Exploratory Data Analysis</h2>
     <h3> Mobile App Store Analysis <i>(R)</i></h3>
     <a href="https://github.com/amandastrack/mobileAppStoreAnalysis/blob/master/Mobile%20App%20Store.ipynb">GitHub</a>
     <p>This Kaggle dataset contains more than 7000 Apple iOS mobile application details. I explored the app statistics across different genres and how the app details contribute to user ratings. </p>
