--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link href="https://fonts.googleapis.com/css?family=Cardo:400,700|Oswald" rel="stylesheet">
 <title>amandastrack.github.io</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 /* Style the body */
 body {
-  font-family: SFMono-Regular;
+  font-family: 'Cardo', serif;
   margin-right: auto;
   margin-left: auto; 
   max-width: 1012px;
@@ -20,12 +21,15 @@ body {
   background: #989898;
   color: white;
   font-size: 27px;
+  font-family: 'Oswald', sans-serif;
+  text-transform: uppercase;
 }
 
 /* Page Content */
 .content {
 padding:15px;
 text-align: justify;
+font-family: 'Cardo', serif;
 }
 
 
@@ -36,6 +40,13 @@ text-align: justify;
 <div class="header">
   <h1>Data Science Portfolio</h1>
   <p>By Amanda Strack</p>
+</div>
+
+<div class="social">
+              <a href="https://www.linkedin.com/in/bhavikatekwani/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+              <a href="https://github.com/bhavika"><i class="fa fa-github" aria-hidden="true"></i></a>
+              <a href="mailto:bhavicka@protonmail.com?Subject=Hello%20"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+              <a href="https://keybase.io/bhavika"><i class="fa fa-key" aria-hidden="true"></i></a>
 </div>
 
 <div class="content">
