--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ font-family: 'Cardo', serif;
 
 <div class="content">
     <p>This portfolio is a compilation of notebooks that explore different machine learning and data analysis techniques. Projects are executed both in Python and R.</p>  
-    <h2 style="border-bottom: 5px groove;">Springboard Capstone Projects</h2>
+    <h2 style="border-bottom: 5px groove;">Capstone Projects</h2>
 
     <h3>Playlist Creation Using Audio Features <i>(Python)</i></h3>
     <a href="https://github.com/amandastrack/Capstone-Project-I-">GitHub</a>
