change background color

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body {
 .header {
   padding: 50px;
   text-align: center;
-  background: #989898;
+  background: #484d5c;
   color: white;
   font-size: 27px;
   font-family: 'Oswald', sans-serif;
