update font color

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body {
   padding: 50px;
   text-align: center;
   background: #484d5c;
-  color: white;
+  color: #ffce00;
   font-size: 27px;
   font-family: 'Oswald', sans-serif;
   text-transform: uppercase;
