--- a/index.html
+++ b/index.html
@@ -42,21 +42,16 @@ font-family: 'Cardo', serif;
   <p>By Amanda Strack</p>
 </div>
 
-<div class="social">
-              <a href="https://www.linkedin.com/in/bhavikatekwani/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-              <a href="https://github.com/bhavika"><i class="fa fa-github" aria-hidden="true"></i></a>
-              <a href="mailto:bhavicka@protonmail.com?Subject=Hello%20"><i class="fa fa-envelope" aria-hidden="true"></i></a>
-              <a href="https://keybase.io/bhavika"><i class="fa fa-key" aria-hidden="true"></i></a>
-</div>
+
 
 <div class="content">
     <p>This portfolio is a compilation of notebooks that explore different machine learning and data analysis techniques. Projects are executed both in Python and R.</p>  
-    <h2 style="border-bottom: 5px groove;">Capstone Projects</h2>
+    <h2 style="border-bottom: 3px double #ffce00;">Springboard Capstone Projects</h2>
 
     <h3>Playlist Creation Using Audio Features <i>(Python)</i></h3>
     <a href="https://github.com/amandastrack/Capstone-Project-I-">GitHub</a>
     <p> In this project, I use audio features extracted from the Spotify API to classify songs into a playlist category. Machine learning techniques utilized include Random Forests, SVM, and XGBoost. I also use an ensembling method of the three models in the final tuning of the model. 
-   <h2 style="border-bottom: 5px groove;">Exploratory Data Analysis</h2>
+   <h2 style="border-bottom: 3px double #ffce00;">Exploratory Data Analysis</h2>
     <h3> Mobile App Store Analysis <i>(R)</i></h3>
     <a href="https://github.com/amandastrack/mobileAppStoreAnalysis/blob/master/Mobile%20App%20Store.ipynb">GitHub</a>
     <p>This Kaggle dataset contains more than 7000 Apple iOS mobile application details. I explored the app statistics across different genres and how the app details contribute to user ratings. </p>
